# freecad-macro-3d-print-multi-export

./: CLAUDE.md  README.md  justfile  mkdocs.yaml  package.xml  pyproject.toml
.github/workflows/: tests.yaml
docs/: changelog.md  contributing.md  formats.md  index.md  installation.md  troubleshooting.md  usage.md
just/: install.just  quality.just  release.just  testing.just
macro/Multi_Export/: MultiExport.FCMacro  README-MultiExport.md  RELEASE_NOTES.md  __init__.py  multi_export_core.py  multi_export_fc.py  wiki-source.txt
tests/: __init__.py  conftest.py
tests/freecad/: __init__.py  test_multi_export.py
tests/just_commands/: conftest.py  test_dev.py  test_documentation.py  test_install.py  test_quality.py  test_release.py
tests/unit/: __init__.py  test_core.py
